@@ -6,6 +6,8 @@ To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.
 
 * Bug Fixes *
 
+ - #5633, Fix postgis load and upgrade with standard_conforming_strings set
+          to off (Sandro Santilli, Regina Obe)
  - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
  - #5610, Regression fix: Allow Nan and infinity again
           in ST_SetPoint (Regina Obe)
